assets/scss/partials/navigation/menu/_item-content.scss
.modal-nav-content {
    .content-text {
        min-height: 544px;
        padding: 0 70px 70px 70px;

        .title {
            line-height: 1.14;
            font-size: 3.5rem;
            font-weight: $bold;

            a {
                &:hover {
                    color: $dark-blue-2;
                }
            }
        }

        .description {
            font-size: 16px;
            margin-top: 25px;
            line-height: 1.25;
        }

        &.no-image {
            .title,
            .description {
                max-width: 75%;
            }
        }

        .multiple-column {
            .links {
                &:first-child {
                    padding-right: 10px;
                }

                &:last-child {
                    padding-left: 10px;
                }
            }
        }

        .links {
            display: flex;
            margin-top: 40px;
            flex-direction: column;

            .text-link:not(:first-child),
            .text-link-inline:not(:first-child) {
                margin-top: 30px;
            }

            .text-link {
                display: inline;
                position: relative;

                svg {
                    top: 0;
                    position: absolute;
                }
            }
        }
    }

    .content-image {
        max-width: 390px;

        .image {
            width: 100%;
            object-fit: contain;
            object-position: top;
        }
    }
}

